<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:orientation="horizontal"
            android:background="@color/colorPrimary"
            android:padding="15dp"
            android:gravity="center">

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/abc_vector_test"
                android:layout_weight="5"/>

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/about_car_header"
                android:gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="25sp"
                android:fontFamily="sans-serif-medium"/>

        <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/abc_vector_test"
                android:layout_weight="5"/>

    </LinearLayout>

    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingHorizontal="40dp"
            android:paddingVertical="10dp">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/state_considered"
                    android:drawableRight="@drawable/ic_user"/>

            <ImageView
                    android:id="@+id/car_image_view"
                    android:layout_width="wrap_content"
                    android:layout_height="200dp"
                    android:src="@drawable/shit"/>

            <androidx.appcompat.widget.AppCompatRatingBar
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/car_model_text_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:text="@string/car_model"
                        android:fontFamily="sans-serif-medium"
                        android:textSize="18sp"/>
                <TextView
                        android:id="@+id/car_model_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-medium"
                        android:text="Model"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/transport_type_text_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/transort_type"/>
                <TextView
                        android:id="@+id/transport_type_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-medium"
                        android:text="Transport Type"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/presence_text_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/presence"/>
                <TextView
                        android:id="@+id/presence_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-medium"
                        android:text="Presence"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/min_price_text_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-medium"
                        android:text="Min price:"/>
                <TextView
                        android:id="@+id/min_price_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-medium"
                        android:text="Min Price"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/car_count_text_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/car_count"/>
                <TextView
                        android:id="@+id/car_count_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-medium"
                        android:text="Car count"/>
            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/color_count_text_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/color_count"/>
                <TextView
                        android:id="@+id/color_count_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-medium"
                        android:text="Color count"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                <TextView
                        android:id="@+id/country_text_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-medium"
                        android:text="@string/country_code"/>
                <TextView
                        android:id="@+id/country_text_view"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="0.5"
                        android:textSize="18sp"
                        android:fontFamily="sans-serif-medium"
                        android:text="Country Code"/>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>

    <Button
            android:id="@+id/get_credit_conditions_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/ButtonTheme"
            android:text="@string/about_car_get_terms"
            android:paddingHorizontal="30dp"/>
</LinearLayout>